<resources>
    <string name="app_name">MobProj</string>
    <string name="action_list">List</string>
    <string name="action_edit">Edit</string>
    <string name="action_show_map">Map</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="list_fragment_label">List Fragment</string>
    <string name="edit_fragment_label">Edit Fragment</string>
    <string name="view_fragment_label">View Fragment</string>
    <string name="map_fragment_label">Map Fragment</string>
    <string name="next">Go to Map</string>
    <string name="previous">Previous</string>

    <string name="hello_home_fragment">Hello first fragment</string>
    <string name="hello_list_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="editposao_name_label">Name:</string>
    <string name="editposao_desc_label">Comment:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_logout">Log Out</string>
    <string name="action_userlist">User List</string>
    <string name="view_posao_label">Posao List</string>
    <string name="action_posaolist">Posao List</string>
    <string name="edit_stars">Edit Rating:</string>
    <string name="edit_salary">Edit Salary:</string>
    <string name="filter_radius_string">Radius in km</string>
    <string name="filter_stars_string">Filter by rating</string>
    <string name="filter_salary_string">Filter by salary</string>
    <string name="filter_name_string">Filter by name</string>
</resources>