<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="elfak.mosis.mobproj.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_ListFragment"
            app:destination="@id/ListFragment" />
        <action
        android:id="@+id/action_HomeFragment_to_EditFragment"
        app:destination="@id/EditFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_MapFragment"
            app:destination="@id/MapFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_UserListFragment"
            app:destination="@id/UserListFragment" />
    </fragment>
    <fragment
        android:id="@+id/ListFragment"
        android:name="elfak.mosis.mobproj.ListFragment"
        android:label="@string/list_fragment_label"
        tools:layout="@layout/fragment_list">

        <action
            android:id="@+id/action_ListFragment_to_EditFragment"
            app:destination="@id/EditFragment" />
        <action
            android:id="@+id/action_ListFragment_to_ViewFragment"
            app:destination="@id/ViewFragment" />
        <action
            android:id="@+id/action_ListFragment_to_MapFragment"
            app:destination="@id/MapFragment" />
    </fragment>
    <fragment
        android:id="@+id/EditFragment"
        android:name="elfak.mosis.mobproj.EditFragment"
        android:label="@string/edit_fragment_label"
        tools:layout="@layout/fragment_edit">
    </fragment>
    <action
        android:id="@+id/action_EditFragment_to_MapFragment"
        app:destination="@id/MapFragment" />
    <action
        android:id="@+id/action_EditFragment_to_ListFragment"
        app:destination="@id/ListFragment" />
    <fragment
        android:id="@+id/ViewFragment"
        android:name="elfak.mosis.mobproj.ViewFragment"
        android:label="@string/view_fragment_label"
        tools:layout="@layout/fragment_view">
    </fragment>
    <fragment
        android:id="@+id/MapFragment"
        android:name="elfak.mosis.mobproj.MapFragment"
        android:label="@string/map_fragment_label"
        tools:layout="@layout/fragment_map">
    </fragment>
    <action
        android:id="@+id/action_MapFragment_to_EditFragment"
        app:destination="@id/EditFragment" />
    <fragment
        android:id="@+id/UserListFragment"
        android:name="elfak.mosis.mobproj.UserListFragment"
        android:label="@string/view_fragment_label"
        tools:layout="@layout/fragment_user_list">
    </fragment>
    <action
        android:id="@+id/action_UserListFragment_to_HomeFragment"
        app:destination="@id/HomeFragment" />
    <action
        android:id="@+id/action_UserListFragment_to_EditFragment"
        app:destination="@id/HomeFragment" />

</navigation>